# simview

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  example.py  example_live.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  vitest.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
simview/: __init__.py  __main__.py  launcher.py  live.py  merge.py  model.py  scene.py  server.py  state.py  utils.py
simview/static/js/: SimView.js  config.js
simview/static/js/components/: AnimationController.js  BatchManager.js  InteractionController.js  InteractionControls.js  Scene.js  StateStore.js
simview/static/js/objects/: Body.js  StaticObject.js  Terrain.js  utils.js
simview/static/js/ui/: AnalysisPanel.js  BatchLegend.js  BodyStateWindow.js  Controls.js  ErrorMetrics.js  Legend.js  PlaybackControls.js  ScalarPlotter.js
simview/static/js/utils/: blobCodec.js  bodyTransforms.js  csv.js  errorMath.js  injectStyles.js  interpolate.js  liveFollow.js  loadRecordingLibs.js  viewState.js
simview/static/lib/: uPlot.min.css
simview/static/lib/chroma-js-3.1.2/: index.min.js
simview/templates/: index.html
tests/: conftest.py  test_cli.py  test_columnar_states.py  test_contacts.py  test_launcher.py  test_live.py  test_merge.py  test_roundtrip.py  test_scene.py  test_server.py  test_show.py  test_terrain.py  test_trajectory.py  test_utils.py
tests/e2e/: smoke.spec.js
tests/js/: AnimationController.test.js  StateStore.test.js  blobCodec.test.js  bodyTransforms.test.js  csv.test.js  errorMath.test.js  interpolate.test.js  liveFollow.test.js  viewState.test.js
