[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simview"
version = "2.5"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Ales Kucera", email = "kuceral@fel.cvut.cz" },
    { name = "David Korcak", email = "david.korcak@gmail.com" },
    { name = "Jan Vlk", email = "vlkjan6@fel.cvut.cz" },
]
description = "THREE.js-based simulation visualization tool"
dependencies = [
    "fastapi>=0.135.3",
    "httptools>=0.7.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.8",
    "python-socketio>=5.16.1",
    "uvicorn>=0.44.0",
    "uvloop>=0.22.1",
]

[project.optional-dependencies]
# Needed only to author simulations via the Python API (simview.scene / state / model).
# Viewing an existing JSON file does not require these.
authoring = [
    "torch",
    "einops",
]

[project.scripts]
simview = "simview.__main__:main"

[tool.setuptools.package-dir]
simview = "simview"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "httpx>=0.27",  # required by fastapi.testclient
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"]  # import sorting

[tool.pytest.ini_options]
testpaths = ["tests"]
