[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simview"
version = "3.2"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "Ales Kucera", email = "kuceral4@fel.cvut.cz" },
    { name = "David Korcak", email = "david.korcak@gmail.com" },
    { name = "Jan Vlk", email = "vlkjan6@fel.cvut.cz" },
]
description = "THREE.js-based simulation visualization tool"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "fastapi>=0.135.3",
    "httptools>=0.7.1; sys_platform != 'win32'",
    "jinja2>=3.1.6",
    "orjson>=3.11.8",
    "uvicorn>=0.44.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
]

[project.urls]
Homepage = "https://github.com/vlk-jan/simview"
Repository = "https://github.com/vlk-jan/simview"
Issues = "https://github.com/vlk-jan/simview/issues"

[project.optional-dependencies]
# Needed only to author simulations via the Python API (simview.scene / state / model).
# Viewing an existing JSON file does not require these.
authoring = ["torch", "einops", "numpy"]

[project.scripts]
simview = "simview.__main__:main"

[tool.setuptools.package-dir]
simview = "simview"

[tool.setuptools.package-data]
simview = ["py.typed", "static/**/*", "templates/**/*"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "httpx>=0.27",      # required by fastapi.testclient
    "pyright>=1.1.411",
    "websockets>=16.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["I"] # import sorting

[tool.ruff.lint.per-file-ignores]
# Test modules put `pytest.importorskip("torch")` before the imports that
# depend on it (so a torch-free environment skips cleanly instead of
# crashing collection), which necessarily puts those imports after a
# statement.
"tests/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
include = ["simview", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
# torch's own stubs are incomplete in places (e.g. some tensor ops), and
# authoring support (torch/einops/numpy) is an optional extra -- avoid
# noisy false positives from third-party stub gaps rather than contorting
# working code around them.
reportMissingTypeStubs = false
